[tool.poetry]
name = "dnn_ecg_comparison"
version = "1.0.0"
description = "Code used for In-depth Benchmarking of Deep Neural Network Architectures for ECG Diagnosis."
authors = ["Naoki Nonaka <yatsugatake_nnk@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.4"
pandas = "1.1.4"
matplotlib = "3.3.4"
scikit-learn = "0.23.2"
torch = "1.7.1"
torchvision = "0.8.2"
wfdb = "3.3.0"
beautifulsoup4 = "4.9.3"
Bottleneck = "1.3.2"
certifi = "2020.12.5"
chardet = "4.0.0"
Cycler = "0.10.0"
decorator = "4.4.2"
fastai = "1.0.61"
fastprogress = "1.0.0"
idna = "2.10"
imageio = "2.9.0"
joblib = "1.0.1"
kiwisolver = "1.3.1"
networkx = "2.5"
numexpr = "2.7.2"
nvidia-ml-py3 = "7.352.0"
packaging = "20.9"
Pillow = "8.1.0"
protobuf = "3.15.3"
pyparsing = "2.4.7"
python-dateutil = "2.8.1"
pytz = "2021.1"
PyWavelets = "1.1.1"
PyYAML = "5.4.1"
requests = "2.25.1"
scikit-image = "0.18.1"
scipy = "1.6.1"
six = "1.15.0"
soupsieve = "2.2"
tensorboardX = "2.1"
threadpoolctl = "2.1.0"
tifffile = "2021.2.26"
tqdm = "4.58.0"
typing-extensions = "3.7.4.3"
urllib3 = "1.26.3"
iterative-stratification = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
